log
Wed 27 Mar 2024 02:38:07 PM UTC: 
 tests:  0|6
total_score: 0/70
d00c6d5
Wed 27 Mar 2024 05:42:23 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ab39a96
Wed 27 Mar 2024 05:44:48 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a104693
Wed 27 Mar 2024 05:46:41 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3bdb77e
Wed 27 Mar 2024 05:47:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7416efe
Wed 27 Mar 2024 05:48:42 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
b151009
Wed 27 Mar 2024 05:49:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b0a9514
Wed 27 Mar 2024 05:51:07 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
395288e
Wed 27 Mar 2024 05:51:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c69fb82
Wed 27 Mar 2024 05:52:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3f89c09
Wed 27 Mar 2024 05:52:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:14: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   53 |   return list->data[L->current];
      |              ^~
list.c:53:21: error: ‘L’ undeclared (first use in this function)
   53 |   return list->data[L->current];
      |                     ^
list.c:53:21: note: each undeclared identifier is reported only once for each function it appears in
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2053812
